# PogoOCR

./: .gitignore  .wakatime-project  CHANGLOG.md  CONTRIBUTING.md  Pipfile  README.md  README.rst  pyproject.toml  requirements.txt  setup.py  test_images.py  test_profileself_total_xp.py
.github/: FUNDING.yml
.github/workflows/: publish.yml  pythonpackage.yml  pythonpublish.yml  tests.yml
PogoOCR/: __init__.py  client.py  cloudvision.py  constants.py  dataclasses.py  exceptions.py  image.py  numbers.py  pattern_lookups.json  pokeocr.py  testing_images.yaml  types.py  utils.py
PogoOCR/images/: __init__.py  actitvity_view.py  interface.py
PogoOCR/providers/: __init__.py  cloudvision.py  interface.py  tesseract.py
PokeOCR/: __init__.py
tests/: test_checkstats.py  test_checkstats_tesseract.py  test_checkteam.py  test_mixedlocale.py  test_total_xp.py
tests/google/: test_checkstats.py
tests/tesseract/: test_checkstats.py
